--- a/proyecto/home.html
+++ b/proyecto/home.html
@@ -14,39 +14,33 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="#" class="active">
+          <a href="/proyecto/home.html" class="active">
             <i class='bx bxs-dashboard' ></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/proyecto/errors.html">
             <i class='bx bx-box' ></i>
-            <span class="links_name">Product</span>
+            <span class="links_name">Errors</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/proyecto/team.html">
             <i class='bx bx-user' ></i>
             <span class="links_name">Team</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="/proyecto/messages.html">
             <i class='bx bx-message' ></i>
             <span class="links_name">Messages</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class='bx bx-heart' ></i>
-            <span class="links_name">Favorites</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
+          <a href="/proyecto/settings.html">
             <i class='bx bx-cog' ></i>
-            <span class="links_name">Setting</span>
+            <span class="links_name">Settings</span>
           </a>
         </li>
         <li class="log_out">
