--- a/proyecto/login.html
+++ b/proyecto/login.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/login-style.css">
+  <link rel="stylesheet" href="login-style.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -14,7 +14,7 @@
     <form class="form1">
       <input class="un " type="text" align="center" placeholder="Username">
       <input class="pass" type="password" align="center" placeholder="Password">
-      <a class="submit" align="center">Sign in</a>
+      <a class="submit" href="/proyecto/home.html" align="center">Sign in</a>
       <p class="forgot" align="center"><a href="#">Forgot Password?</p>
             
                 
